# Configura-es-para-o-FastAPI-em-Python

./: README.md  pyproject.toml
